<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_1"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_1" />

    <item
        android:id="@+id/navigation_2"
        android:icon="@drawable/ic_navigation_black_24dp"
        android:title="@string/main_2" />

    <item
        android:id="@+id/navigation_3"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_3" />

    <item
        android:id="@+id/navigation_4"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_4" />

    <item
        android:id="@+id/navigation_5"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_5" />

</menu>
